@startuml
'https://plantuml.com/class-diagram

class UnloadUI{

}

class UnloadController{
+ createUS205(mmsiCode)
}


class US205 {
- initialize(mmsiCode)
+ toString()

}

class WriteForAFile{
+ writeForAFiLe(textualInformation)

}


UnloadUI ..> UnloadController
UnloadController -> US205
US205 --> WriteForAFile : uses

@enduml